--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "firebase": "^11.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.15.0",
     "mongoose": "^6.13.8",
